资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2/32bit/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
MT_API INT32 __stdcall MT_Init(void);
MT_API INT32 __stdcall MT_DeInit(void);
MT_API INT32 __stdcall MT_Get_Dll_Version(char** sVer);
MT_API INT32 __stdcall MT_Set_Thread_Timeout(UINT32 ms);
MT_API INT32 __stdcall MT_Open_UART(char* sCOM);
MT_API INT32 __stdcall MT_Open_UART_Unicode(TCHAR* sCOM);
MT_API INT32 __stdcall MT_Close_UART(void);
MT_API INT32 __stdcall MT_Open_USB(void);
MT_API INT32 __stdcall MT_Close_USB(void);
MT_API INT32 __stdcall MT_Open_Net(BYTE IP0,BYTE IP1,BYTE IP2,BYTE IP3,WORD IPPort);
MT_API INT32 __stdcall MT_Close_Net(void);
MT_API INT32 __stdcall MT_Check(void);
MT_API INT32 __stdcall MT_Get_Product_Resource(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Product_ID(char* sID);
MT_API INT32 __stdcall MT_Get_Product_SN(char* sSN);
MT_API INT32 __stdcall MT_Get_Product_SN2(BYTE* sSN);
MT_API INT32 __stdcall MT_Get_Product_SN3(char* sSN);
MT_API INT32 __stdcall MT_Get_Product_Version(INT32* pMajor,INT32* pMinor);
MT_API INT32 __stdcall MT_Get_Product_Version2(INT32* pMajor,INT32* pMinor,INT32* pRelease,INT32* pBuild);
MT_API INT32 __stdcall MT_Get_Axis_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Acc(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Acc(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Get_Axis_Dec(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Dec(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Get_Axis_Mode(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Velocity(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Position(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Position_Open(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Position_Close(WORD AObj);
MT_API INT32 __stdcall MT_Get_Axis_Velocity_V_Target(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Velocity_V_Target_Abs(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Velocity_V_Target_Rel(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Velocity_Stop(WORD AObj);
MT_API INT32 __stdcall MT_Get_Axis_Position_V_Max(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Position_V_Max(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Get_Axis_Position_P_Target(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Position_P_Target_Abs(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Position_P_Target_Rel(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Position_Stop(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Position_Close_Dec_Factor(WORD AObj,float AFactor);
MT_API INT32 __stdcall MT_Set_Axis_Halt(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Halt_All(void);
MT_API INT32 __stdcall MT_Get_Axis_V_Now(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Software_P_Now(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Software_P(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Get_Axis_Status(WORD AObj,BYTE* pRun,BYTE* pDir,BYTE* pNeg,BYTE* pPos,BYTE* pZero,BYTE* pMode);
MT_API INT32 __stdcall MT_Get_Axis_Status2(WORD AObj,INT32* pRun,INT32* pDir,INT32* pNeg,INT32* pPos,INT32* pZero,INT32* pMode);
MT_API INT32 __stdcall MT_Get_Axis_Status_Run(WORD AObj,INT32* pRun);
MT_API INT32 __stdcall MT_Get_Axis_Status_Dir(WORD AObj,INT32* pDir);
MT_API INT32 __stdcall MT_Get_Axis_Status_Neg(WORD AObj,INT32* pNeg);
MT_API INT32 __stdcall MT_Get_Axis_Status_Pos(WORD AObj,INT32* pPos);
MT_API INT32 __stdcall MT_Get_Axis_Status_Zero(WORD AObj,INT32* pZero);
MT_API INT32 __stdcall MT_Get_Axis_Status_Mode(WORD AObj,INT32* pMode);
MT_API INT32 __stdcall MT_Get_Param_Mem_Len(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Param_Mem_Data(WORD AObj,BYTE* pValue);
MT_API INT32 __stdcall MT_Set_Param_Mem_Data(WORD AObj,BYTE Value);
MT_API INT32 __stdcall MT_Get_System_Mem_Len(INT32* pValue);
MT_API INT32 __stdcall MT_Get_System_Mem_Data(WORD AObj,BYTE* pValue);
MT_API INT32 __stdcall MT_Set_System_Mem_Data(WORD AObj,BYTE Value);
MT_API INT32 __stdcall MT_Get_Optic_In_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Optic_In_Basic_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Optic_In_Single(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Optic_In_All(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Optic_Out_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Set_Optic_Out_Single(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Optic_Out_All(INT32 Value);
MT_API INT32 __stdcall MT_Get_Optic_Out_Single(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Optic_Out_All(INT32* pValue);
MT_API INT32 __stdcall MT_Get_OC_Out_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Set_OC_Out_Single(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_OC_Out_All(INT32 Value);
MT_API INT32 __stdcall MT_Get_OC_Out_Single(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_OC_Out_All(INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home_Home_Switch(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home_Encoder_Index(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home_Encoder_Home_Switch(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home_Home_Zero(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Home_V(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Home_Stop(WORD AObj);