资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2_Multi/64bit/MT_API.pas

unit MT_API;
//**************************************************//
// V3.16.0 updated 2017-01-30
//**************************************************//
interface
//==================================================
//运行环境
//===================================================
//dll版本
//初始化窗口
function MT_Init():Integer;stdcall;external 'MT_API.dll'
//关闭窗口
function MT_DeInit():Integer;stdcall;external 'MT_API.dll'
//获取dll版本号
function MT_Get_Dll_Version(sVer:PPChar):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Thread_Timeout(ms:Cardinal):Integer;stdcall;external 'MT_API.dll'

//======================================================
//通信口
//======================================================
//打开 UART
function MT_Open_UART(ADev:Integer;sCOM:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
function MT_Open_UART_Unicode(ADev:Integer;sCOM:PChar):Integer;stdcall;external 'MT_API.dll'
//关闭 UART
function MT_Close_UART(ADev:Integer):Integer;stdcall;external 'MT_API.dll'

//打开USB
function MT_Open_USB(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//关闭USB
function MT_Close_USB(ADev:Integer):Integer;stdcall;external 'MT_API.dll'

//打开网口
function MT_Open_Net(ADev:Integer;IP0,IP1,IP2,IP3:Byte;IPPort:Word):Integer;stdcall;external 'MT_API.dll'
//关闭网口
function MT_Close_Net(ADev:Integer):Integer;stdcall;external 'MT_API.dll'

//=====================================================
//板卡检测
//=====================================================
//检测设备
function MT_Check(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//读取资源模块
function MT_Get_Product_Resource(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//获取ID
function MT_Get_Product_ID(ADev:Integer;sID:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
//获取SN
function MT_Get_Product_SN(ADev:Integer;sSN:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Product_SN2(ADev:Integer;sSN:PByte):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Product_SN3(ADev:Integer;sSN:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
//读取固件版本号
function MT_Get_Product_Version(ADev:Integer;pMajor:PInteger;pMinor:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Product_Version2(ADev:Integer;pMajor:PInteger;pMinor:PInteger;
   pRelease:PInteger;pBuild:PInteger):Integer;stdcall;external 'MT_API.dll'
//===================================================================
//板卡温度
//===================================================================
//获取温度
//function MT_Get_Board_Temperature(pValue:PDouble):Integer;stdcall;external 'MT_API.dll'

//===================================================================
//电机相关
//====================================================================
//轴数
function MT_Get_Axis_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取加速度
function MT_Get_Axis_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置加速度
function MT_Set_Axis_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取加速度
function MT_Get_Axis_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置加速度
function MT_Set_Axis_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取工作模式
function MT_Get_Axis_Mode(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置速度模式
function MT_Set_Axis_Mode_Velocity(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置位置模式
function MT_Set_Axis_Mode_Position(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Position_Open(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Position_Close(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//读取速度模式目标速度
function MT_Get_Axis_Velocity_V_Target(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置速度模式目标速度
function MT_Set_Axis_Velocity_V_Target_Abs(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置速度模式目标速度
function MT_Set_Axis_Velocity_V_Target_Rel(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//停止速度模式
function MT_Set_Axis_Velocity_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

//读取位置模式最大速度
function MT_Get_Axis_Position_V_Max(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置位置模式最大速度
function MT_Set_Axis_Position_V_Max(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取位置模式目标
function MT_Get_Axis_Position_P_Target(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置位置模式目标
function MT_Set_Axis_Position_P_Target_Abs(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Position_P_Target_Rel(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//停止位置模式
function MT_Set_Axis_Position_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置编码器比例,用在减速判断上
function MT_Set_Axis_Position_Close_Dec_Factor(ADev:Integer;AObj:Word;AFactor:Single):Integer;stdcall;external 'MT_API.dll'

//紧急停止
function MT_Set_Axis_Halt(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Halt_All(ADev:Integer):Integer;stdcall;external 'MT_API.dll'

//////////////////////////////////////////////////////////////
///  状态相关
///  //////////////////////////////////////////////////////
//读取当前速度
function MT_Get_Axis_V_Now(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取当前软件位置
function MT_Get_Axis_Software_P_Now(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Software_P(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status(ADev:Integer;AObj:Word;
            pRun:PByte;
            pDir:PByte;
            pNeg:PByte;
            pPos:PByte;
            pZero:PByte;
            pMode:PByte):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status2(ADev:Integer;AObj:Word;
            pRun:PInteger;
            pDir:PInteger;
            pNeg:PInteger;
            pPos:PInteger;
            pZero:PInteger;
            pMode:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Run(ADev:Integer;AObj:Word;
            pRun:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Dir(ADev:Integer;AObj:Word;
            pDir:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Neg(ADev:Integer;AObj:Word;
            pNeg:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Pos(ADev:Integer;AObj:Word;
            pPos:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Zero(ADev:Integer;AObj:Word;
            pZero:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Status_Mode(ADev:Integer;AObj:Word;
            pMode:PInteger):Integer;stdcall;external 'MT_API.dll'
////////////////////////////////////////////////////////////////////////
//存储器
//读取存储器长度
function MT_Get_Param_Mem_Len(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取存储器数据
function MT_Get_Param_Mem_Data(ADev:Integer;AObj:Word;pValue:PByte):Integer;stdcall;external 'MT_API.dll'
//设置存储器数据
function MT_Set_Param_Mem_Data(ADev:Integer;AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
////////////////////////////////////////////////////////////////////////
//系统存储器
//读取存储器长度
function MT_Get_System_Mem_Len(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取存储器数据
function MT_Get_System_Mem_Data(ADev:Integer;AObj:Word;pValue:PByte):Integer;stdcall;external 'MT_API.dll'
//设置存储器数据
function MT_Set_System_Mem_Data(ADev:Integer;AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
//光隔输入
function MT_Get_Optic_In_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_In_Basic_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_In_Single(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_In_All(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//光隔输出
function MT_Get_Optic_Out_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Optic_Out_Single(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Optic_Out_All(ADev:Integer;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_Out_Single(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Optic_Out_All(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//OC输出
function MT_Get_OC_Out_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_OC_Out_Single(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_OC_Out_All(ADev:Integer;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_OC_Out_Single(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_OC_Out_All(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置0位模式
function MT_Set_Axis_Mode_Home(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Home_Home_Switch(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Home_Encoder_Index(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Home_Encoder_Home_Switch(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Mode_Home_Home_Zero(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置0位模式目标速度
function MT_Set_Axis_Home_V(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//停止0位模式
function MT_Set_Axis_Home_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

